# trance

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  package.rs
.github/workflows/: ci.yml  release.yml
crates/trance-dbus/: Cargo.toml
crates/trance-dbus/src/: client.rs  lib.rs
crates/trance-gpu/: Cargo.toml
crates/trance-gpu/src/: cpu.rs  lib.rs
crates/trance-gpu/src/gpu/: frame_upscaler.rs  init.rs  mod.rs  pixel_format.rs  shader.rs  textures.rs  types.rs  upscale.rs
crates/trance-ipc/: Cargo.toml
crates/trance-ipc/src/: lib.rs  shm.rs
crates/trance-upscaler/: Cargo.toml
crates/wayland-idle/: Cargo.toml
crates/wayland-idle/src/: lib.rs  monitor.rs
crates/wayland-idle/src/wayland/: mod.rs  thread.rs
crates/wayland-present/: Cargo.toml
crates/wayland-present/src/: lib.rs  presenter.rs
crates/wayland-present/src/overlay/: buffer.rs  mod.rs  thread.rs
crates/wayland-present/src/overlay/handlers/: buffer_objects.rs  input.rs  layer_shell.rs  mod.rs  registry.rs
crates/wayland-present/src/overlay/state/: mod.rs  overlay.rs  types.rs
docs/: NAMING.md  creating_plugins.md
idle-cli/src/: config.rs  doctor.rs  doctor_service.rs
idle-cli/src/commands/: control.rs
idle-daemon/: Cargo.toml
idle-daemon/rpm/: post.sh
idle-daemon/src/: config.rs  config_parse.rs
idle-daemon/src/daemon/: presentation.rs  tick_loop.rs
idle-daemon/src/presentation/: frame_loop.rs
idle-runner/src/: discovery.rs
trance/: Cargo.toml
trance-api/: Cargo.toml
trance-api/src/: callbacks.rs  color.rs  lib.rs  logo_block.rs  monitor.rs  palette.rs  rng.rs  screensaver.rs  system_info.rs  terminal_cell.rs
trance-applet/: Cargo.toml  README.md  justfile
trance-applet/debian/: changelog  prerm
trance-applet/i18n/en/: trance_applet.ftl
trance-applet/resources/: app.desktop  app.metainfo.xml
trance-applet/src/: app.rs  config.rs  daemon_client.rs  main.rs
trance-applet/src/app/: message.rs  mod.rs  state.rs  update.rs  view.rs
trance-cli/: Cargo.toml
trance-cli/debian/: changelog
trance-cli/src/: bug_report.rs  completion.rs  doctor.rs  doctor_checks.rs  doctor_sys.rs  interactive.rs  main.rs  self_update.rs  tests.rs  usage.rs
trance-cli/src/completions/: trance.fish  trance.nu
trance-daemon/: Cargo.toml
trance-daemon/assets/: com.local76.Trance.conf  com.local76.Trance.service  io.github.ubermetroid.trance.policy  io.github.ubermetroid.trance.service  trance-daemon.service
trance-daemon/assets/packaging/: user-service-lib.sh
trance-daemon/debian/: changelog  postinst  postrm  prerm
trance-daemon/rpm/: posttrans.sh  preun.sh
trance-daemon/src/: config.rs  config_watcher.rs  failsafe.rs  inhibit.rs  ipc_runner.rs  main.rs
trance-daemon/src/controller/: commands.rs  mod.rs  status.rs
trance-daemon/src/daemon/: mod.rs  presentation.rs
trance-daemon/src/dbus_server/: auth.rs  mod.rs  service.rs  watchers.rs
trance-daemon/src/presentation/: frame_loop.rs  layout.rs  mod.rs  overlays.rs  plugin_loop.rs  refresh.rs  topology.rs
trance-plugins-all/: Cargo.toml
trance-plugins-all/debian/: changelog
trance-runner/: Cargo.toml
trance-runner/src/: caption_overlay.rs  discovery.rs  launcher.rs  launcher_tests.rs  lib.rs  platform_helpers.rs  plugin_session.rs  trance_runner.rs
trance-runner/src/apps/: mod.rs
trance-runner/src/cell_renderer/: gpu_init.rs  gpu_render.rs  mod.rs  pixels.rs
trance-runner/src/core/: mod.rs  screen_palette.rs  screensaver.rs
trance-runner/src/core/logo_block/: mod.rs
trance-runner/src/core/logo_block/patterns/: mod.rs  (+1 more)
trance-runner/src/plugin_session/: mod.rs
trance-runner/src/toolkit/: linux_proc.rs  linux_queries.rs  mod.rs  platform.rs  sys_info.rs  theme_query.rs
trance-runner/src/toolkit/sys_info/: mod.rs  monitors.rs  theme.rs
trance-tui/: Cargo.toml
trance-tui/src/: main.rs
trance/src/: lib.rs  main.rs
trance/src/daemon/: mod.rs
