[package]
name = "trance-cli"
version = "0.3.5"
edition = "2024"
description = "Command-line interface for the trance screensaver daemon"
license = "MIT"

[[bin]]
name = "trance"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
trance-dbus = { workspace = true }
libc = { workspace = true }

[package.metadata.deb]
name = "trance-cli"
changelog = "debian/changelog"
copyright = "2026 UberMetroid <admin@ubermetroid.com>"
maintainer = "UberMetroid <admin@ubermetroid.com>"
extended-description = "Thin CLI for controlling the trance screensaver daemon over D-Bus."
depends = "libc6, trance"
section = "utils"
priority = "optional"
assets = [
    ["target/release/trance", "usr/bin/trance", "755"],
    ["trance.1", "usr/share/man/man1/trance.1", "644"]
]