[package]
name = "trance-plugins-all"
version = "2.0.1"
edition = "2024"
description = "Meta package that hard-depends on all official IdleScreen saver plugins"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

# All official savers — hard Depends so `idlescreen-savers` (and thus
# `app-cosmic`) always install every plugin, not merely recommend them.
[package.metadata.deb]
name = "idlescreen-savers"
changelog = "debian/changelog"
copyright = "2026 IdleScreen"
maintainer = "IdleScreen <jerydleuck@gmail.com>"
extended-description = "Installs every official IdleScreen screensaver plugin (saver-*). Required by the app-cosmic product package."
depends = "idlescreen, saver-beams, saver-bursts, saver-chaos, saver-cosmos, saver-glyphs, saver-gnats, saver-radar, saver-storm, saver-hearth, saver-ripple"
provides = "trance-plugins-all"
replaces = "trance-plugins-all"
conflicts = "trance-plugins-all (<< 2.0.0)"
section = "utils"
priority = "optional"
assets = []

[package.metadata.generate-rpm]
name = "idlescreen-savers"
release = "1"
arch = "noarch"
summary = "All official IdleScreen savers"
description = "Meta package that depends on every official IdleScreen screensaver plugin."
license = "Apache-2.0"
assets = []

[package.metadata.generate-rpm.requires]
idlescreen = "*"
saver-beams = "*"
saver-bursts = "*"
saver-chaos = "*"
saver-cosmos = "*"
saver-glyphs = "*"
saver-gnats = "*"
saver-radar = "*"
saver-storm = "*"
saver-hearth = "*"
saver-ripple = "*"

[package.metadata.generate-rpm.provides]
trance-plugins-all = "*"

[package.metadata.generate-rpm.obsoletes]
trance-plugins-all = "*"
